589733:UF-282:Pricing issue